<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_long_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="50dp"
    tools:context="com.example.tf.travelbook.LongTrip">

    <TextView
        android:id="@+id/start"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/start" />

    <Button
        android:id="@+id/long_trip_start"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@+id/start"
        android:background="@color/tianyi_30"
        android:text="@string/choose"
        android:textColor="@color/black_50"
        android:textSize="20sp" />

    <Button
        android:id="@+id/long_trip_finish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/long_trip_start"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/finish"
        android:background="@color/tianyi_30"
        android:text="@string/choose"
        android:textColor="@color/black_50"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/finish"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/long_trip_finish"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/finish" />

    <Button
        android:id="@+id/long_trip_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/tianyi_50"
        android:text="@string/sure"
        android:visibility="gone" />
</RelativeLayout>
