<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_short_trip_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tf.travelbook.ShortTripView">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/view"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/short_trip_view_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:background="@color/white"
        android:text="@string/choose"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.58000004" />

    <Button
        android:id="@+id/short_trip_view_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/short_trip_view_btn"
        app:layout_constraintRight_toRightOf="@+id/short_trip_view_btn"
        app:layout_constraintTop_toBottomOf="@+id/short_trip_view_btn"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/short_trip_view_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/short_trip_view_sure"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/short_trip_view_btn"
        app:layout_constraintRight_toLeftOf="@+id/short_trip_view_sure"
        app:layout_constraintTop_toTopOf="@+id/short_trip_view_sure"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
