<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.tf.travelbook.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        android:title="地图" />

    <fragment
        android:id="@+id/mainactivity_fragment"
        android:name="com.example.tf.travelbook.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mainactivity_menu"
        android:layout_below="@+id/toolbar">

    </fragment>

    <RadioGroup

        android:id="@+id/mainactivity_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/mainactivity_menu_map"
            style="@style/MainRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map" />

        <RadioButton
            android:id="@+id/mainactivity_menu_near"
            style="@style/MainRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/near" />

        <RadioButton
            android:id="@+id/mainactivity_menu_trip"
            style="@style/MainRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trip" />

        <RadioButton
            android:id="@+id/mainactivity_menu_mine"
            style="@style/MainRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine" />
    </RadioGroup>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@mipmap/views" />

</RelativeLayout>
